<resources>
    <string name="app_name">WebMuo</string>
    <string name="terms"> By signing up for an account you agree to our Terms and Conditions</string>
    <string name="signup">Register</string>
    <string name="signin">SignIn</string>
    <string name="name">Name*</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="call_duration">Call Duration : </string>
    <string-array name="attachment">
        <item>@string/camera</item>
        <item>@string/gallery</item>
        <item>@string/remove</item>
    </string-array>
    <string-array name="attachment1">
        <item>@string/doc</item>
        <item>@string/camera</item>
        <item>@string/gallery</item>
        <item>@string/audio</item>
        <item>@string/video</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="status_array">
        <item>Single</item>
        <item>Married</item>
    </string-array>

    <string name="doc">Document</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>

    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="you">You</string>
    <string name="follow">Follow</string>
    <string name="delete">Delete Post</string>
    <string name="unfollow">UnFollow</string>
    <string name="photo">Photo</string>
    <string name="remove">Delete</string>
    <string name="share">Share</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_otpphone_number">Enter Code</string>
    <string name="share1">the best moment with your friends</string>
    <string name="facebook_app_id">1769655666386970</string>
    <string name="fb_login_protocol_scheme">fb1769655666386970</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">NG4gO82b8JCVmu0mzaMcH412V</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">NbG5AfDrbiKMM3skKH8xciwfsxbvYyFoYUYvebsA0K6E7D9de3</string>
    <string name="transition_view_image" translatable="false">view_image</string>
    <string name="mi_done">Done</string>
    <string name="title_choose_image">Open</string>

    <string name="msg_crop_failed">Crop failed: %s</string>

    <string name="btn_new_crop">New crop</string>

    <string name="key_enable_scale_gesture">enable_scale</string>
    <string name="key_enable_translate_gesture">enable_translation</string>
    <string name="key_scale">key_scale</string>

    <string name="key_border_color">border_color</string>
    <string name="key_grid_color">grid_color</string>
    <string name="key_overlay_color">overlay_color</string>
    <string name="key_corner_color">corner_color</string>
    <string name="key_draw_grid">is_draw_grid</string>
    <string name="key_dynamic_crop">is_dynamic_crop</string>
    <string name="key_crop_shape">crop_shape</string>
    <string name="key_dashed_grid">dashed_grid</string>

    <string name="key_quality">image_quality</string>
    <string name="key_save_format">image_format</string>

    <string name="trova_base_folder">/WebMuo/Media</string>
    <string name="trova_base_image_folder">/Images/</string>
    <string name="trova_base_thumb_folder">/Thumb/</string>
    <string name="trova_base_audio_folder">/Audio/</string>
    <string name="trova_base_video_folder">/Video/</string>
    <string name="trova_base_document_folder">/Documents/</string>
</resources>
