<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="10dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtphotoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/share"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtphotoTitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtphotoTitle"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/share1"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtphotoTitle1"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/gallery"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="1.5dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btnCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/camera"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>