<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <RelativeLayout
                android:id="@+id/rl_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/feelout"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_logo"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </RelativeLayout>


            <RelativeLayout

                android:id="@+id/rllogin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_logo"
                android:layout_centerInParent="true"
                android:gravity="center">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="@dimen/_5dp"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="SignUp with Facebook"
                    android:textSize="@dimen/_16dp" />

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/twitter_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rllogin_button"
                android:padding="5dp"
                android:visibility="visible">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15dp"
                    android:padding="10dp">


                    <LinearLayout
                        android:id="@+id/rlsex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/txtgender"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Gender"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/radioSex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5dp"
                            android:layout_toRightOf="@+id/txtgender"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/radio_male" />

                            <RadioButton
                                android:id="@+id/radioFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_female" />

                        </RadioGroup>

                    </LinearLayout>


                    <RelativeLayout
                        android:id="@+id/rl_signup_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rlsex"
                        android:layout_marginTop="5dp">


                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:imeOptions="actionNext"
                            android:inputType="textCapSentences"
                            android:padding="15dp"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/bt_clear_name"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="8dp"
                            android:background="@android:color/transparent"
                            android:text="x"
                            android:textColor="@color/grey"
                            android:visibility="gone" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rl_signup_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl_signup_name">

                        <TextView
                            android:id="@+id/txtusravailable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="User name is available"
                            android:textColor="@color/colorPrimary"
                            android:visibility="gone" />


                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/input_userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:padding="15dp"
                            android:text=""
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/bt_clear_userName"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="8dp"
                            android:background="@android:color/transparent"
                            android:text="x"
                            android:textColor="@color/grey"
                            android:visibility="gone" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rlEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl_signup_userName"
                        android:gravity="bottom"
                        android:visibility="visible">


                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:padding="15dp"
                            android:text=""
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/bt_clear_email"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:text="x"
                            android:textColor="@color/grey"
                            android:visibility="gone" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rl_signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rlEmail">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:padding="15dp"
                            android:textSize="16sp" />
                    </RelativeLayout>


                </RelativeLayout>

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/llsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:layout_marginTop="10dp"
                    android:background="@color/invite_title"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/link_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Already registered? Log In"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:visibility="visible" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>