<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/feelout"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_logo"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="@string/app_name"
                    android:textColor="@color/invite_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_logo"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:visibility="visible"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/rlUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="bottom"
                        android:visibility="visible">


                        <EditText
                            android:id="@+id/input_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:padding="20dp"
                            android:text=""
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/bt_clear_username"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:text="x"
                            android:textColor="@color/grey"
                            android:visibility="visible" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rlPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rlUsername"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="bottom"
                        android:visibility="visible">


                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:padding="20dp"
                            android:text=""
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/bt_clear_password"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:background="@android:color/transparent"
                            android:text="x"
                            android:textColor="@color/grey"
                            android:visibility="gone" />
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_sigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@color/invite_title"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:id="@+id/rllogin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_sigin"
                android:gravity="center">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="@dimen/_5dp"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="SignUp with Facebook"
                    android:textSize="@dimen/_16dp" />

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/twitter_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/link_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rllogin_button"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="Don't Have an Account? Register Now"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible" />
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>